// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<img
  alt=""
  className="Spinner my-spinner"
  src="mock.jpg"
  style={
    Object {
      "margin": "1rem",
    }
  }
/>
`;

exports[`renders padding CSS class 1`] = `
<img
  alt=""
  className="Spinner Spinner--withPadding"
  src="mock.jpg"
/>
`;
